cmake_minimum_required(VERSION 3.22)
project(GPUJoin CUDA CXX)
set(CMAKE_CUDA_STANDARD 14)
set(CMAKE_CXX_STANDARD 14)
add_executable(GPUJoin vector_add.cu matrix_multiplication.cu natural_join.cu parallel_scan.cu atomic_operation.cu)
set_target_properties(GPUJoin PROPERTIES CUDA_SEPARABLE_COMPILATION ON)